@@ -19,6 +19,10 @@ version 1.7.6, in progress
 - Internal: recode parts of the gretl GUI to avoid dependence
   on deprecated GTK APIs
 - Several fixes for reading and writing gretl session files
+- Function packages: add facility to append a sample script
+- Enhancements for GUI function-packager
+- File dialogs: try to ensure that focus falls back to the right
+  window when such windows are closed
 
 6/13/2008 version 1.7.5
 - max() and min() functions: extend the syntax to allow a list
